--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>JacaScript Basics</title>
   </head>
   <body>
+    <h1>Title</h1>
+    <ul>
+      <li>item 0</li>
+      <li>item 1</li>
+      <li>item 2</li>
+      <li>item 3</li>
+      <li>item 4</li>
+      <li>item 5</li>
+    </ul>
     <script src="js/main.js"></script>
   </body>
 </html>
