--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>JacaScript Basics</title>
   </head>
   <body>
-
+    <input type = "text" value="hello">
+    <textarea>hello hello</textarea>
+    
     <script src="js/main.js"></script>
   </body>
 </html>
