--- a/index.html
+++ b/index.html
@@ -5,17 +5,7 @@
     <title>JacaScript Basics</title>
   </head>
   <body>
-    <input type = "checkbox" name="os" value="mac"> macOS
-    <input type = "checkbox" name="os" value="win" checked> Windows
-    <hr>
-    <input type = "radio" name="color" value="red" checked> Red
-    <input type = "radio" name="color" value="blue"> Blue
-    <hr>
-    <select>
-      <option>item 0</option>
-      <option selected>item 1</option>
-      <option>item 2</option>
-    </select>
+  <button>OK</button>
     <script src="js/main.js"></script>
   </body>
 </html>
