--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>JacaScript Basics</title>
   </head>
   <body>
-  <button>OK</button>
+  <div></div>
     <script src="js/main.js"></script>
   </body>
 </html>
